--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-bom</artifactId>
+			<version>2021.2.0</version>
+			<scope>import</scope>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 
 	<build>
