--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
 			<scope>import</scope>
 			<type>pom</type>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
