--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://<username>:<pwd>@<cluster>.mongodb.net/mypokemon
+spring.data.mongodb.uri=mongodb+srv://kghudgens:gonzalo2727@cluster0.4jew1ln.mongodb.net/mypokemon
 spring.data.mongodb.database=mypokemon
