allow error messages to show in postman

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://kghudgens:gonzalo2727@cluster0.4jew1ln.mongodb.net/mypokemon
 spring.data.mongodb.database=mypokemon
 spring.mvc.hiddenmethod.filter.enabled: true
+server.error.include-message=always
