Cleaning this project

--- a/pom.xml
+++ b/pom.xml
@@ -34,24 +34,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-bom</artifactId>
-			<version>2021.2.0</version>
-			<scope>import</scope>
-			<type>pom</type>
-		</dependency>
-
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20190722</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>persistence-api</artifactId>
-			<version>1.0.2</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>6.0.12</version>
 		</dependency>
 	</dependencies>
 
